# aws-lambda-iac-template

./: .env.infra.example  .gitignore  README.md  cloudformation.yaml  index.py  pyproject.toml  run.py  scripts.sh
app/: .env.example  index.py  utils.py
